--- a/server/http/index.html
+++ b/server/http/index.html
@@ -127,6 +127,7 @@
                             <option value="1">TCG</option>
                             <option value="2" selected>TCG/OCG</option>
                             <option value="3">Anime</option>
+                            <option value="B">Monster League</option>
                             <option value="4">All</option>
                         </select>
                     </label>
@@ -204,6 +205,7 @@
                     <option value="1">TCG</option>
                     <option value="2" selected>OCG/TCG</option>
                     <option value="3">Anime</option>
+                    <option value="B">Monster League</option>
                 </select>
                 <br />
                 <label>Ban List</label>
