--- a/server/http/index.html
+++ b/server/http/index.html
@@ -127,8 +127,8 @@
                             <option value="1">TCG</option>
                             <option value="2" selected>TCG/OCG</option>
                             <option value="3">Anime</option>
-                            <option value="B">Monster League</option>
-                            <option value="4">All</option>
+                            <option value="4">Monster League</option>
+                            <option value="5">All</option>
                         </select>
                     </label>
                     <label>Round Type
@@ -205,7 +205,7 @@
                     <option value="1">TCG</option>
                     <option value="2" selected>OCG/TCG</option>
                     <option value="3">Anime</option>
-                    <option value="B">Monster League</option>
+                    <option value="4">Monster League</option>
                 </select>
                 <br />
                 <label>Ban List</label>
