auto connect battlepack mode

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animation.css">
     <script src="js/primus.js"></script>
+    <script src="js/battlepack3.js"></script>
 
 
     <script>
