constructed bp3 and safety check

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -128,8 +128,9 @@
                             <option value="1">TCG</option>
                             <option value="2" selected>TCG/OCG</option>
                             <option value="3">Anime</option>
-                            <option value="4">Monster League</option>
-                            <option value="5">All</option>
+                            <option value="4">Sealed Monster League</option>
+                            <option value="5">Constructed Monster League</option>
+                            <option value="6">All</option>
                         </select>
                     </label>
                     <label>Round Type
@@ -206,7 +207,9 @@
                     <option value="1">TCG</option>
                     <option value="2" selected>OCG/TCG</option>
                     <option value="3">Anime</option>
-                    <option value="4">Monster League</option>
+                    <option value="4">Sealed Monster League</option>
+                    <option value="5">Constructed Monster League</option>
+                    <option value="6" disabled>Goat Format</option>
                 </select>
                 <br />
                 <label>Ban List</label>
