--- a/server/http/index.html
+++ b/server/http/index.html
@@ -90,7 +90,7 @@
                         
                     </li>
 -->
-                    <li><a href=" http://ygopro.us/client.tar.gz">Linux32 TarGz</a>
+                    <li><a href=" http://ygopro.us/setups/client.tar.gz">Linux32 TarGz</a>
 
                     </li>
                     <li><a href="http://ygopro.us/salvationmac.zip">Mac OSX 10.7+ App Zip</a>
@@ -128,8 +128,8 @@
                             <option value="1">TCG</option>
                             <option value="2" selected>TCG/OCG</option>
                             <option value="3">Anime</option>
-                            <option value="4">Sealed Monster League</option>
-                            <option value="5">Constructed Monster League</option>
+                            <option value="4">Sealed BP3</option>
+                            <option value="5">Constructed BP3</option>
                             <option value="6">All</option>
                         </select>
                     </label>
@@ -207,8 +207,8 @@
                     <option value="1">TCG</option>
                     <option value="2" selected>OCG/TCG</option>
                     <option value="3">Anime</option>
-                    <option value="4">Sealed Monster League</option>
-                    <option value="5">Constructed Monster League</option>
+                    <option value="4">Sealed BP3</option>
+                    <option value="5">Constructed BP3</option>
                     <option value="6" disabled>Goat Format</option>
                 </select>
                 <br />
