--- a/server/http/index.html
+++ b/server/http/index.html
@@ -315,35 +315,30 @@
                         <label>Auto Card Placement</label>
                         <input type="checkbox" data-localhost="auto_card_placing" />
                         <br />
-                        <label>Random Card Placement</label>
+                        <label style="padding:10em">Random Card Placement</label>
                         <input type="checkbox" data-localhost="random_card_placing" />
                         <br />
                         <label>Auto Chain Order</label>
                         <input type="checkbox" data-localhost="auto_chain_order" />
                         <br />
-                        <label>Enable Sound</label>
-                        <input type="checkbox" data-localhost="enable_sound" />
-                        <br />
-                        <label>Enable DirectX</label>
-                        <input type="checkbox" data-localhost="use_d3d" />
-                        <br />
                         <label>No Delay for Chains</label>
                         <input type="checkbox" data-localhost="no_delay_for_chain" />
+                        <br />
+                        <br />
+                        <label>Enable Sound</label>
+                        <input type="checkbox" data-localhost="enable_sound" />
                         <br />
                         <label>Enable Music</label>
                         <input type="checkbox" data-localhost="enable_music" />
                         <br />
-                        <label style="display:none">Fullscreen</label>
-                        <input type="checkbox" data-localhost="fullscreen" style="display:none" />
-                        <br />
-                        <label>Enable User Covers</label>
-                        <input type="checkbox" data-localhost="enable_sleeve_loading" />
+                        <label>Enable DirectX</label>
+                        <input type="checkbox" data-localhost="use_d3d" />
                         <br />
                         <label>Anti Aliasing</label>
                         <input type="checkbox" data-localhost="antialias" />
                         <br />
                         <label>Font Size</label>
-                        <input type="range" min="8" max="18" value="12" id="fontsize">
+                        <input type="range" min="8" max="18" value="14" id="fontsize">
                         <br />
                         <label>Font</label>
                         <select id="fontlist">
