settings page fix

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -315,7 +315,7 @@
                         <label>Auto Card Placement</label>
                         <input type="checkbox" data-localhost="auto_card_placing" />
                         <br />
-                        <label style="padding:10em">Random Card Placement</label>
+                        <label style="padding-left:1em">Random Card Placement</label>
                         <input type="checkbox" data-localhost="random_card_placing" />
                         <br />
                         <label>Auto Chain Order</label>
