CommandParser, typos, ai

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -370,7 +370,7 @@
                         <br />
                         <button onclick="createmanifest();">Update Launcher</button>
                         <br />
-                        <button onclick="ygopro('-c')">View YGOPro FOlder</button>
+                        <button onclick="ygopro('-c')">View YGOPro Folder</button>
                     </div>
                 </div>
             </section>
