Enable Goat Format

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -164,7 +164,7 @@
                             <option value="18">Traditional</option>
                             <option value="19">Unlimited</option>
                             <option value="20">Mega-Banned</option>
-                            <option value="21" disabled>TBC</option>
+                            <option value="21">Goat Format</option>
                             <option value="22">N/A</option>
                             <option value="23">All</option>
 
@@ -211,7 +211,6 @@
                     <option value="3">Anime</option>
                     <option value="4">Sealed BP3</option>
                     <option value="5">Constructed BP3</option>
-                    <option value="6" disabled>Goat Format</option>
                 </select>
                 <br />
                 <label>Ban List</label>
@@ -237,7 +236,7 @@
                     <option value="18">Traditional</option>
                     <option value="19">Unlimited</option>
                     <option value="20">Mega-Banned</option>
-                    <option value="21" disabled>TBC</option>
+                    <option value="21">Goat Format</option>
                     <option value="22">N/A</option>
 
                 </select>
