--- a/server/http/index.html
+++ b/server/http/index.html
@@ -58,7 +58,7 @@
             </li>
             <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('host')">Host</span>
             </li>
-            <li><a class="psudolinksingle" style='text-decoration:none' onclick="singlesitenav('forum')" target="_blank" href="http://forum.ygopro.us">Forum</a>
+            <li><a class="psudolinksingle webonly" style='text-decoration:none' onclick="singlesitenav('forum')" target="_blank" href="http://forum.ygopro.us">Forum</a>
             </li>
             <li><span class="psudolinksingle" onclick="singlesitenav('chat')">Chat</span>
             </li>
@@ -284,7 +284,7 @@
     </header>
     <header style="padding-top:50px" id="forum">
 
-        <iframe src="http://forum.ygopro.us" height="100%" width="100%" style="min-height: 422px; border: none;"></iframe>
+      
 
     </header>
     <header style="padding-top:50px" id="chat">
