--- a/server/http/index.html
+++ b/server/http/index.html
@@ -90,7 +90,7 @@
                         
                     </li>
 -->
-                    <li><a href=" http://ygopro.us/setups/client.tar.gz">Linux32 TarGz</a>
+                    <li><a href=" http://ygopro.us/setups/client.tar.gz">Linux32 TarGz/ Windows Portable</a>
 
                     </li>
                     <li><a href="http://ygopro.us/salvationmac.zip">Mac OSX 10.7+ App Zip</a>
