--- a/server/http/index.html
+++ b/server/http/index.html
@@ -85,7 +85,7 @@
                     <li><a href="http://ygopro.us/setup.msi">Full Windows Client </a>
 
                     </li>
-<!--
+                    <!--
                     <li><a href="http://ygopro.us/setup.msi">Windows Mirror 1 </a>
                         
                     </li>
@@ -147,24 +147,11 @@
                             <option value="1">2015.4.1(OCG)</option>
                             <option value="2" selected>2015.1.1(TCG)</option>
                             <option value="3">2015.1.1(OCG)</option>
-                            <option value="4">2014.10.1(TCG)</option>
-                            <option value="5">2014.10.1(OCG)</option>
-                            <option value="6">2014.7.14(TCG)</option>
-                            <option value="7">2014.7.1(OCG)</option>
-                            <option value="8">2014.4.1(TCG)</option>
-                            <option value="9">2014.4.1(OCG)</option>
-                            <option value="10">2014.1.1(TCG)</option>
-                            <option value="11">2014.2.1(OCG)</option>
-                            <option value="12">2013.9.1(TCG)</option>
-                            <option value="13">2013.9.1(OCG)</option>
-                            <option value="14">2013.3.1</option>
-                            <option value="15">2012.9.1</option>
-                            <option value="16">2012.3.1</option>
-                            <option value="17">2011.9.1</option>
+                            <option value="21">Goat Format</option>
                             <option value="18">Traditional</option>
                             <option value="19">Unlimited</option>
                             <option value="20">Mega-Banned</option>
-                            <option value="21">Goat Format</option>
+
                             <option value="22">N/A</option>
                             <option value="23">All</option>
 
@@ -219,25 +206,13 @@
                     <option value="1">2015.4.1(OCG)</option>
                     <option value="2" selected>2015.1.1(TCG)</option>
                     <option value="3">2015.1.1(OCG)</option>
-                    <option value="4">2014.10.1(TCG)</option>
-                    <option value="5">2014.10.1(OCG)</option>
-                    <option value="6">2014.7.14(TCG)</option>
-                    <option value="7">2014.7.1(OCG)</option>
-                    <option value="8">2014.4.1(TCG)</option>
-                    <option value="9">2014.4.1(OCG)</option>
-                    <option value="10">2014.1.1(TCG)</option>
-                    <option value="11">2014.2.1(OCG)</option>
-                    <option value="12">2013.9.1(TCG)</option>
-                    <option value="13">2013.9.1(OCG)</option>
-                    <option value="14">2013.3.1</option>
-                    <option value="15">2012.9.1</option>
-                    <option value="16">2012.3.1</option>
-                    <option value="17">2011.9.1</option>
+                    <option value="21">Goat Format</option>
                     <option value="18">Traditional</option>
                     <option value="19">Unlimited</option>
                     <option value="20">Mega-Banned</option>
-                    <option value="21">Goat Format</option>
+
                     <option value="22">N/A</option>
+                    <option value="23">All</option>
 
                 </select>
                 <br />
@@ -284,7 +259,7 @@
     </header>
     <header style="padding-top:50px" id="forum">
 
-      
+
 
     </header>
     <header style="padding-top:50px" id="chat">
@@ -393,7 +368,7 @@
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date();
             a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
+                m = s.getElementsByTagName(o)[0];
             a.async = 1;
             a.src = g;
             m.parentNode.insertBefore(a, m)
@@ -417,7 +392,7 @@
 
         function locallogin(init) {
             'use strict';
-                localStorage.nickname = localStorage.nickname || '';
+            localStorage.nickname = localStorage.nickname || '';
             if (localStorage.nickname.length < 1 || init === true) {
                 var username = prompt('Username: ', localStorage.nickname);
                 while (!username) {
