--- a/server/http/index.html
+++ b/server/http/index.html
@@ -93,7 +93,7 @@
                     <li><a href=" http://ygopro.us/setups/client.tar.gz">Linux32 TarGz/ Windows Portable</a>
 
                     </li>
-                    <li><a href="http://ygopro.us/salvationmac.zip">Mac OSX 10.7+ App Zip</a>
+                    <li><a href="http://ygopro.us/setups/salvationmac.zip">Mac OSX 10.7+ App Zip</a>
 
                     </li>
                     <!--
