--- a/server/http/index.html
+++ b/server/http/index.html
@@ -96,8 +96,8 @@
                     <li><a href="http://ygopro.us/setups/salvationmac.zip">Mac OSX 10.7+ App Zip</a>
 
                     </li>
-                    <!--
-                <li><a href="http://salvationdevelopment.com/setup.msi"> Mirror 1</a></li>
+                    
+                <li><a href="https://mega.co.nz/#!ewQCFKaL!cYvODwTr1cZglaM4diFdre5oBgOh0TR7jk6n4-q2oLghttp://salvationdevelopment.com/setup.msi"> Mirror 1</a></li><!--
                 <li><a href="https://drive.google.com/file/d/0B1ytOVM5sj4CV19EN2VRODhDQXc/view?usp=sharing">Mirror 2</a></li>
                 <li><a href="http://d-h.st/5PC6">Mirror 3</a></li>
                 <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>-->
@@ -202,9 +202,9 @@
                 <br />
                 <label>Ban List</label>
                 <select id="creategamebanlist">
-                    <option value="0">2015.4.1(TCG)</option>
+                    <option value="0" selected>2015.4.1(TCG)</option>
                     <option value="1">2015.4.1(OCG)</option>
-                    <option value="2" selected>2015.1.1(TCG)</option>
+                    <option value="2" >2015.1.1(TCG)</option>
                     <option value="3">2015.1.1(OCG)</option>
                     <option value="21">Goat Format</option>
                     <option value="18">Traditional</option>
