--- a/server/http/index.html
+++ b/server/http/index.html
@@ -183,14 +183,17 @@
 
         <section id="hostSettings">
             <div>
-                <label>Current Deck</label>
-                    <select class='currentdeck'></select>
-                </br>
+                
                 <h2>Settings</h2>
                 <!--<label>Ranked</label>
                 <input type="radio" name="ranked" value="R" />Yes
                 <input type="radio" name="ranked" value="U" checked />No
                 <br />-->
+                <label>Current Deck</label>
+                    <select class='currentdeck'>
+                        <option selected value=""></option>
+                    </select>
+                </br>
                 <label>Card Pool</label>
                 <select id="creategamecardpool">
                     <option value="0">OCG</option>
