--- a/server/http/index.html
+++ b/server/http/index.html
@@ -97,7 +97,7 @@
 
                     </li>
                     
-                <li><a href="https://mega.co.nz/#!ewQCFKaL!cYvODwTr1cZglaM4diFdre5oBgOh0TR7jk6n4-q2oLghttp://salvationdevelopment.com/setup.msi"> Mirror 1</a></li><!--
+                <li><a href="https://mega.co.nz/#!WpBlURha!86T7odXv3G0jqGV1PXQCkwkTdLkTgDiXiL_GmqfoYxY"> Mirror 1</a></li><!--
                 <li><a href="https://drive.google.com/file/d/0B1ytOVM5sj4CV19EN2VRODhDQXc/view?usp=sharing">Mirror 2</a></li>
                 <li><a href="http://d-h.st/5PC6">Mirror 3</a></li>
                 <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>-->
@@ -401,7 +401,7 @@
                 var username = prompt('Username: ', localStorage.nickname);
                 while (!username) {
                     username = prompt('Username: ', localStorage.nickname);
-                    username.replace(/[^a-zA-Z0-9]/g, "");
+                    username.replace(/[^a-zA-Z0-9_]/g, "");
                 }
                 localStorage.nickname = username;
             }
