--- a/server/http/index.html
+++ b/server/http/index.html
@@ -429,6 +429,7 @@
 
             if (launcher) {
                 //locallogin(true);
+                $('webonly').css('display':'none');
                 setInterval(function () {
                     $.getJSON('http://127.0.0.1:9468/', function (data) { //small kittens hate localhost
                         var selected = $(".currentdeck option:selected").val();
