--- a/server/http/index.html
+++ b/server/http/index.html
@@ -131,7 +131,7 @@
                 </ul>
 
             </nav>
-            <input id="login-username" type="text" class=""> 
+            <input id="login-username" type="text" class="launcheronly" placeholder="USERNAME"> 
             <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 3 : Revision 1</div>
             <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
         </div>
