--- a/server/http/index.html
+++ b/server/http/index.html
@@ -487,7 +487,7 @@
                     username.replace(/[^a-zA-Z0-9_]/g, "");
                 }
                 localStorage.nickname = username;
-               $(document.body).removeClass("unlogged");
+               $('.unlogged').removeClass("unlogged");
             }
              
             $(document.body).addClass("launcher").removeClass('unlogged').removeClass('web');
