--- a/server/http/index.html
+++ b/server/http/index.html
@@ -22,6 +22,12 @@
     <link rel="stylesheet" href="css/animation.css">
     <script src="js/primus.js"></script>
     <script src="js/battlepack3.js"></script>
+    <script src="vendor/audiojs/audio.min.js"></script>
+    <script>
+      audiojs.events.ready(function() {
+        var as = audiojs.createAll();
+      });
+    </script>
     <style>
         .web .launcheronly {
             display:none;
@@ -138,7 +144,7 @@
                 <h1 style="padding-top:80px;"   class="shine">
             <span style="color:#e4a;">YGOPro</span> Salvation Server</h1>
             </span>
-            <h2>Online Yu-Gi-Oh! Simulator</h2>
+            <h2 class="shine">Online Yu-Gi-Oh! Simulator</h2>
             <nav class="lander-main">
 
                 <div class="downloadbutton" style="display:none">Play Now</div>
@@ -537,6 +543,7 @@
         });
     </script>
     <script src="js/http-gamelist.js"></script>
+    
 </body>
 
 </html>
