--- a/server/http/index.html
+++ b/server/http/index.html
@@ -172,7 +172,6 @@
                 </ul>
 
             </nav>
-            <audio src="yugioh-ft-dj-harmony-your-move.mp3" />
             <input id="login-username" type="text" class="launcheronly" placeholder="Enter Username to Login"> 
             <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 3 : Revision 1</div>
             <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
@@ -352,6 +351,7 @@
         <div style="color:white; width:600px; margin:0 auto;" id="list">
 
         </div>
+        <audio src="yugioh-ft-dj-harmony-your-move.mp3" style="width:100%" />
     </header>
     <header style="padding-top:50px" id="settings">
 
