--- a/server/http/index.html
+++ b/server/http/index.html
@@ -86,6 +86,17 @@
         background-position: top right;
     }
 }
+        .audiojs {
+          position: absolute;
+          bottom: 19px;
+          width: 100% !important;
+        }
+        .audiojs .scrubber {
+            width: 80% !important;
+        }
+        div#news {
+          height: 82vh;
+        }
     </style>
 
 
