--- a/server/http/index.html
+++ b/server/http/index.html
@@ -362,7 +362,7 @@
         <div style="color:white; width:600px; margin:0 auto;" id="list">
 
         </div>
-        <audio src="yugioh-ft-dj-harmony-your-move.mp3" style="width:100%" />
+        <audio src="http://ygopro.us/yugioh-ft-dj-harmony-your-move.mp3" style="width:100%" />
     </header>
     <header style="padding-top:50px" id="settings">
 
