--- a/server/http/index.html
+++ b/server/http/index.html
@@ -81,16 +81,9 @@
         background-position: top right;
     }
 }
-        .audiojs {
+       audio#podcast {
           position: absolute;
-          bottom: 19px;
-          width: 100% !important;
-        }
-        .audiojs .scrubber {
-            width: 80% !important;
-        }
-        div#news {
-          height: 78.5vh;
+          bottom: 20px;
         }
     </style>
 
@@ -357,7 +350,7 @@
         <div style="color:white; width:600px; margin:0 auto;" id="list">
 
         </div>
-        <audio style="width:100%" />
+        <audio style="width:100%" controls />
             <source src="http://ygopro.us/yugioh-ft-dj-harmony-your-move.mp3" type="audio/mp3">
         </audio>
     </header>
