--- a/server/http/index.html
+++ b/server/http/index.html
@@ -81,10 +81,11 @@
         background-position: top right;
     }
 }
-       audio#podcast {
-          position: absolute;
-          bottom: 20px;
-        }
+    audio#podcast {
+        position: absolute;
+        bottom: 17px;
+        background: black;
+    }
     </style>
 
 
@@ -350,7 +351,7 @@
         <div style="color:white; width:600px; margin:0 auto;" id="list">
 
         </div>
-        <audio style="width:100%" controls />
+        <audio id="podcast" style="width:100%" controls />
             <source src="http://ygopro.us/yugioh-ft-dj-harmony-your-move.mp3" type="audio/mp3">
         </audio>
     </header>
