--- a/server/http/index.html
+++ b/server/http/index.html
@@ -86,6 +86,12 @@
         bottom: 17px;
         background: black;
     }
+    #news {
+        height: 427px;
+    }
+    .web #news {
+        height: 85;
+    }
     </style>
 
 
