MP3 requires incompatiable GPL License.

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -358,7 +358,7 @@
 
         </div>
         <audio id="podcast" style="width:100%" controls />
-            <source src="http://ygopro.us/yugioh-ft-dj-harmony-your-move.mp3" type="audio/mp3">
+            <source src="http://ygopro.us/yugioh-ft-dj-harmony-your-move.ogg" type="audio/ogg">
         </audio>
     </header>
     <header style="padding-top:50px" id="settings">
