setup url update

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -155,7 +155,7 @@
                 <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
                     <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                    <li><a href="http://ygopro.us/setup.msi">Full Windows Client </a>
+                    <li><a href="http://ygopro.us/setups/setup.msi">Full Windows Client </a>
 
                     </li>
                     <!--
@@ -170,7 +170,7 @@
 
                     </li>
                     
-                <li><a href="https://mega.co.nz/#!WpBlURha!86T7odXv3G0jqGV1PXQCkwkTdLkTgDiXiL_GmqfoYxY"> Mirror 1</a></li><!--
+                <!--<li><a href="https://mega.co.nz/#!WpBlURha!86T7odXv3G0jqGV1PXQCkwkTdLkTgDiXiL_GmqfoYxY"> Mirror 1</a></li>
                 <li><a href="https://drive.google.com/file/d/0B1ytOVM5sj4CV19EN2VRODhDQXc/view?usp=sharing">Mirror 2</a></li>
                 <li><a href="http://d-h.st/5PC6">Mirror 3</a></li>
                 <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>-->
