--- a/server/http/index.html
+++ b/server/http/index.html
@@ -153,7 +153,7 @@
 
                     </li>
                     
-                <li><a href="https://mega.co.nz/#!WsZRmazB!2TJX3ebGDZBHX5p6ZKRg9Zjv9UAu9tQOJqcnCpPl4uQ"> Mirror 1</a></li>
+                <li><a href="https://mega.co.nz/#!utBRyTzB!EcezmcFqFN10rO2fRT4PYpTxCHy0GkumA8YvYdrwGTM"> Mirror 1</a></li>
                 <!--<li><a href="https://drive.google.com/file/d/0B1ytOVM5sj4CV19EN2VRODhDQXc/view?usp=sharing">Mirror 2</a></li>
                 <li><a href="http://d-h.st/5PC6">Mirror 3</a></li>
                 <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>-->
