--- a/server/http/index.html
+++ b/server/http/index.html
@@ -154,7 +154,7 @@
                     </li>
                     
                 <li><a href="https://mega.co.nz/#!utBRyTzB!EcezmcFqFN10rO2fRT4PYpTxCHy0GkumA8YvYdrwGTM"> Mirror 1</a></li>
-                <!--<li><a href="https://drive.google.com/file/d/0B1ytOVM5sj4CV19EN2VRODhDQXc/view?usp=sharing">Mirror 2</a></li>
+                <li><a href="http://ygopro.us/setups/setup.msi.torrent">Torrent</a></li><!--
                 <li><a href="http://d-h.st/5PC6">Mirror 3</a></li>
                 <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>-->
 
