server side adjustments

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -23,6 +23,19 @@
     <script src="js/primus.js"></script>
     <script src="js/index-controls.js"></script>
     <script src="js/battlepack3.js"></script>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-56840301-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
 
     <style>
         .web .launcheronly {
@@ -138,7 +151,7 @@
                 <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
                     <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                    <li><a href="http://ygopro.us/setups/setup.msi">Full Windows Client </a>
+                    <li><a href="http://ygopro.us/setups/setup.msi" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Full Windows']);">Full Windows Client </a>
 
                     </li>
                     <!--
@@ -146,14 +159,14 @@
                         
                     </li>
 -->
-                    <li><a href=" http://ygopro.us/setups/client.tar.gz">Linux32 TarGz/ Windows Portable</a>
+                    <li><a href=" http://ygopro.us/setups/client.tar.gz" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Portable']);">Linux32 TarGz/ Windows Portable</a>
 
                     </li>
-                    <li><a href="http://ygopro.us/setups/salvationmac.zip">Mac OSX 10.7+ App Zip</a>
+                    <li><a href="http://ygopro.us/setups/salvationmac.zip" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Mac']);">Mac OSX 10.7+ App Zip</a>
 
                     </li>
                     
-                <li><a href="https://mega.co.nz/#!utBRyTzB!EcezmcFqFN10rO2fRT4PYpTxCHy0GkumA8YvYdrwGTM"> Mirror 1</a></li>
+                <li><a href="https://mega.co.nz/#!utBRyTzB!EcezmcFqFN10rO2fRT4PYpTxCHy0GkumA8YvYdrwGTM" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Torrent']);"> Mirror 1</a></li>
                 <li><a href="http://ygopro.us/setups/setup.msi.torrent">Torrent</a></li><!--
                 <li><a href="http://d-h.st/5PC6">Mirror 3</a></li>
                 <li><a href="https://www.mediafire.com/?xrm3rko4ln3e64z">Mirror 4</a></li>-->
