--- a/server/http/index.html
+++ b/server/http/index.html
@@ -57,8 +57,8 @@
           color: black !important;
           font-weight: bold;
         -webkit-animation-name: pulse;
-        -webkit-animation-duration: 2s;
-        -webkit-animation-iteration-count: infinite;
+        -webkit-animation-duration: 1s;
+        -webkit-animation-iteration-count: 10;
         }
         
         
@@ -80,7 +80,7 @@
   -webkit-background-clip: text;
   -webkit-animation-name: shine;
   -webkit-animation-duration: 10s;
-  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: 10;
   -webkit-animation-timing-function: linear;
     }
 
