--- a/server/http/index.html
+++ b/server/http/index.html
@@ -453,6 +453,7 @@
         ga('create', 'UA-56840301-1', 'auto');
         ga('require', 'displayfeatures');
         ga('send', 'pageview');
+        sprocket('hi','test');
     </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>
