--- a/server/http/index.html
+++ b/server/http/index.html
@@ -430,6 +430,41 @@
             </section>
         </div>
     </header>
+    <header style="padding-top:50px" id="duelscreen">
+        <div class="field" id="duelzone">
+        <div class="fieldcontainer">
+            <div class="fieldimage">
+
+
+            </div>
+
+        </div>
+    </div>
+
+
+    <div id="phases">
+
+        <div id="lifepoints">
+            <div class="left">
+                <meter class="p0lp" value="8000" min="0" low="2000" max="8000"></meter>
+                <meter class="p0time" value="300" min="0" low="150" max="300"></meter>
+                <input class="p0time" type="value" value="300" />
+                <input class="p0lp" type="value" value="8000" />
+                
+            </div>
+            <div class='center'>
+                <div class='player'></div>
+                <div class='phase'></div>
+            </div>
+            <div class="right">
+                <meter class="p1lp" value="8000" min="0" low="2000" max="8000"></meter>
+                <meter class="p1time" value="300" min="0" low="150" max="300"></meter>
+                <input class="p1time" type="value" value="300" />
+                <input class="p1lp" type="value" value="8000" />
+            </div>
+        </div>
+    </div>
+    </header>
     <footer class="superfooter">
         <div style='max-width:1000px; margin:0 auto'>
             <span itemscope itemtype="http://schema.org/SoftwareApplication">YGOPro</span> &amp
