--- a/server/http/index.html
+++ b/server/http/index.html
@@ -437,6 +437,8 @@
 
     </script>
     <script src="js/http-gamelist.js"></script>
+    <script src="js/buffer.js"></script>
+    <script src="js/spectators.js"></script>
     
 </body>
 
