--- a/server/http/index.html
+++ b/server/http/index.html
@@ -438,7 +438,7 @@
     </script>
     <script src="js/http-gamelist.js"></script>
     <script src="js/buffer.js"></script>
-    <script src="js/spectators.js"></script>
+    <script src="js/bundle.js"></script>
     
 </body>
 
