--- a/server/http/index.html
+++ b/server/http/index.html
@@ -185,6 +185,11 @@
 
         <section id='gamelistsection'>
             <div id="gamelistitems"></div>
+            <SCRIPT language="Javascript">
+            var cpmstar_rnd=Math.round(Math.random()*999999);
+            var cpmstar_pid=44429;
+            document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
+            </SCRIPT>
        
         </section>
 
