--- a/server/http/index.html
+++ b/server/http/index.html
@@ -174,9 +174,22 @@
                 </ul>
 
             </nav>
-            <input id="login-username" type="text" class="launcheronly" placeholder="Enter Username to Login"> 
+            <form id="ipblogin">
+                <input type="hidden" name="auth_key" value="880ea6a14ea49e853634fbdc5015a024">
+                <input type="hidden" name="referer" value="http://forum.ygopro.us/">
+                <input id="ips_username" type="text" class="input_text" name="ips_username" size="50" tabindex="1">
+                <input id="ips_password" type="password" class="input_text" name="ips_password" size="50" tabindex="2"><br>
+                <input type="checkbox" id="remember" checked="checked" name="rememberMe" value="1" class="input_check" tabindex="0">
+                <input type="checkbox" id="invisible" name="anonymous" value="1" class="input_check" tabindex="0">
+                <input type="submit" class="input_submit" value="Sign In" tabindex="0"> 
+            </form>
             <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 4 : Revision 1</div>
             <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
+            <SCRIPT language="Javascript">
+            var cpmstar_rnd=Math.round(Math.random()*999999);
+            var cpmstar_pid=44429;
+            document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
+            </SCRIPT>
         </div>
     </header>
     <header style="padding-top:50px" id="gamelist">
@@ -185,11 +198,7 @@
 
         <section id='gamelistsection'>
             <div id="gamelistitems"></div>
-            <SCRIPT language="Javascript">
-            var cpmstar_rnd=Math.round(Math.random()*999999);
-            var cpmstar_pid=44429;
-            document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
-            </SCRIPT>
+           
        
         </section>
 
